# StratML

./: .coverage  .gitignore  README.md  RUN.md  TEST.md  best_model.pkl  config.yaml  pyproject.toml  requirements.txt  structure.txt  test_config.yaml
CLI/: config.yaml  install.ps1  install.sh  main.py  stratml.bat  stratml.sh
CLI/docs/: Commands.md
core/: __init__.py  schemas.py
data/: download.py  download_digits.py  download_housing.py  download_wine.py
data/processed/: README.md
data/scripts/: download_all.py  download_california_housing.py  download_cifar10.py  download_digits_noisy.py  download_energy.py  download_imdb.py  download_iris.py  download_mnist.py  download_pima.py  download_wine_quality.py  download_wine_sklearn.py
decision/: __init__.py  meta_features.py  run_state_builder.py  signals.py  state_builder.py  state_history.py
demo/: _base.py  calibrate.py  demo_california_housing.py  demo_cifar10.py  demo_creditcard.py  demo_energy.py  demo_imdb.py  demo_mnist.py  demo_mnist_dl.py  demo_pima.py  demo_titanic.py  demo_wine_quality.py
docs/: config-schema.md  division-detail.md  features.md  schemas.md  test  todo.md  work-division.md
docs/cli/: CLI_setup.md  Commands.md  Commands_to_add_phase2.md  setup.md
docs/decision-team/: action-gen-next-steps.md  action-gen.md  decision-intelligence.md  decision_team_split.md  orchestration-plan.md  phase1-state-pipeline.md  proposed-state-object.md  test.md  (+1 more)
execution/: __init__.py  run_ingestion_profiling.py  schemas.py
outputs/: README.md
scripts/: seed_value_model.py
tests/: conftest.py
(+98 files in other folders)
