[project]
name = "multi-agent-auto-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "torch>=2.2.0",
  "scikit-learn>=1.4.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "mlflow>=2.10.0",
  "tensorboard>=2.14.0",
  "langchain>=0.1.0",
  "langgraph>=0.0.40",
  "langsmith>=0.0.60",
  "hydra-core>=1.3.2",
  "pydantic>=2.6.0",
  "typer>=0.9.0",
  "rich>=13.7.0",
  "matplotlib>=3.8.0",
  "pytest>=9.0.2",
]

[project.scripts]
stratml = "stratml.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["stratml*"]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
